feat: 로드맵 생성 시 태그 정보 추가